.happypack/s--1183040382
SyntaxError: Adjacent JSX elements must be wrapped in an enclosing tag (43:157)

[0m [90m 41 | [39m      [33m<[39m[33mPageTemplate[39m header[33m=[39m{[33m<[39m [33mHeader[39m [35m/>} footer={< Footer /[39m[33m>[39m}[33m>[39m
 [90m 42 | [39m        {[36mthis[39m[33m.[39mstate[33m.[39mfiles[33m.[39mlength [33m>[39m [35m0[39m [33m&&[39m [33m<[39m[33mHomeCarousel[39m data[33m=[39m{[36mthis[39m[33m.[39mstate[33m.[39mfiles}[33m/[39m[33m>[39m}
[31m[1m>[22m[39m[90m 43 | [39m        {[36mthis[39m[33m.[39mstate[33m.[39mfiles[33m.[39mlength [33m>[39m [35m0[39m [33m&&[39m [33m<[39m[33mTitleSection[39m align[33m=[39m[32m"center"[39m color[33m=[39m[32m"grayscale-6"[39m className[33m=[39m[32m"padding-top-3 padding-bottom-3"[39m[33m>[39m[33mComunidad[39m[33m<[39m[35m/TitleSection> <FileCarousel data={this.state.files}/[39m[33m>[39m}[33m<[39m[33mbr[39m[33m/[39m[33m>[39m
 [90m    | [39m                                                                                                                                                             [31m[1m^[22m[39m
 [90m 44 | [39m        [33m<[39m[33mCategoryCarousel[39m[35m/> {this.state.files.length > 0 && <GroupCarousel data={this.state.files}/[39m[33m>[39m}
 [90m 45 | [39m        {[36mthis[39m[33m.[39mstate[33m.[39mfiles[33m.[39mlength [33m>[39m [35m0[39m [33m&&[39m [33m<[39m[33mCommunityCarousel[39m data[33m=[39m{[36mthis[39m[33m.[39mstate[33m.[39mfiles}[33m/[39m[33m>[39m}
 [90m 46 | [39m      [33m<[39m[33m/[39m[33mPageTemplate[39m[33m>[39m[0m

BabelLoaderError: SyntaxError: Adjacent JSX elements must be wrapped in an enclosing tag (43:157)

[0m [90m 41 | [39m      [33m<[39m[33mPageTemplate[39m header[33m=[39m{[33m<[39m [33mHeader[39m [35m/>} footer={< Footer /[39m[33m>[39m}[33m>[39m
 [90m 42 | [39m        {[36mthis[39m[33m.[39mstate[33m.[39mfiles[33m.[39mlength [33m>[39m [35m0[39m [33m&&[39m [33m<[39m[33mHomeCarousel[39m data[33m=[39m{[36mthis[39m[33m.[39mstate[33m.[39mfiles}[33m/[39m[33m>[39m}
[31m[1m>[22m[39m[90m 43 | [39m        {[36mthis[39m[33m.[39mstate[33m.[39mfiles[33m.[39mlength [33m>[39m [35m0[39m [33m&&[39m [33m<[39m[33mTitleSection[39m align[33m=[39m[32m"center"[39m color[33m=[39m[32m"grayscale-6"[39m className[33m=[39m[32m"padding-top-3 padding-bottom-3"[39m[33m>[39m[33mComunidad[39m[33m<[39m[35m/TitleSection> <FileCarousel data={this.state.files}/[39m[33m>[39m}[33m<[39m[33mbr[39m[33m/[39m[33m>[39m
 [90m    | [39m                                                                                                                                                             [31m[1m^[22m[39m
 [90m 44 | [39m        [33m<[39m[33mCategoryCarousel[39m[35m/> {this.state.files.length > 0 && <GroupCarousel data={this.state.files}/[39m[33m>[39m}
 [90m 45 | [39m        {[36mthis[39m[33m.[39mstate[33m.[39mfiles[33m.[39mlength [33m>[39m [35m0[39m [33m&&[39m [33m<[39m[33mCommunityCarousel[39m data[33m=[39m{[36mthis[39m[33m.[39mstate[33m.[39mfiles}[33m/[39m[33m>[39m}
 [90m 46 | [39m      [33m<[39m[33m/[39m[33mPageTemplate[39m[33m>[39m[0m

    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyLoader.js:42:15)
    at LOADER_EXECUTION (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/loader-runner/lib/LoaderRunner.js:119:14)